<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.code.wars.models.Completed" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_challenge_detail"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:maxLength="150"
            android:maxLines="3"
            android:text='@{@string/generic_name(item.name ?? "")}'
            android:textAlignment="inherit"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtSlugLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="100"
            android:text='@{@string/slug(item.slug ?? "")}'
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/txtLabelLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/completed_languages"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txtSlugLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtSlugLabel" />

        <TextView
            android:id="@+id/txtResultLanguages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="20"
            android:textSize="14sp"
            app:languages='@{item.completedLanguages ?? ""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtLabelLanguages"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelLanguages"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtLabelCompletedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="100"
            android:text="@string/completed_date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtResultLanguages" />

        <TextView
            android:id="@+id/txtCompletedAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLength="100"
            android:textSize="14sp"
            app:date='@{item.completedAt}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtLabelCompletedAt"
            app:layout_constraintTop_toBottomOf="@+id/txtResultLanguages"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
