<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.code.wars.models.Challenge" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/txtLabelLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/languages"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/txtResultLanguages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRankName" />

        <TextView
            android:id="@+id/txtLabelTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tags"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtResultLanguages" />

        <TextView
            android:id="@+id/txtResultLanguages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="20"
            android:textSize="14sp"
            app:languages='@{item.languages ?? ""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtLabelLanguages"
            app:layout_constraintTop_toBottomOf="@+id/txtRankName"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtTags"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="20"
            android:textSize="14sp"
            app:languages='@{item.tags ?? ""}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtLabelTags"
            app:layout_constraintTop_toTopOf="@+id/txtLabelTags"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:maxLength="150"
            android:maxLines="3"
            android:text='@{@string/generic_name(item.name ?? "")}'
            android:textAlignment="inherit"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="3"
            android:text='@{@string/challenge_description(item.description ?? "")}'
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txtRankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="100"
            android:text='@{@string/challenge_rank(item.rankName ?? "")}'
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/txtRankPosition"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/txtRankPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingEnd="4dp"
            android:text="@{@string/challenge_rank_position(item.rank)}"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtRankName"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            tools:text="@tools:sample/lorem[0]" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_challenge_detail"
            app:titleTextColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
